# Email_Automation

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_dashboard.py
output/: .gitkeep
src/gmail_crew_ai/: api.py  crew.py  dashboard.py  models.py
src/gmail_crew_ai/config/: agents.yaml  tasks.yaml
src/gmail_crew_ai/tools/: __init__.py  gmail_tools.py
static/: dashboard.css
templates/: crew_config.html  dashboard.html  login.html  settings.html
